app/assets/stylesheets/components/_favorite_card.scss
.favorite-card-category {
  font-size: clamp(0.9rem, calc(0.6rem + 1svh), 1.2rem);
  width: 80vw;
  background-color: $custom-card-bg;
  color: $deep-navy;
  height: 95px
}

.favorite-circle-details {
  // flex: 0 0 15em;
  // flex: 0 0 clamp(8em, 25svw, 15em);
  text-wrap: wrap;
  height: 80px;
  // font-size: 0.8em;
}

.favorite-circle-image {
  width: 80px;
  height: 80px;
}

.favorite-circle-name {
  color: inherit;
  overflow-wrap: break-word;
}

.favorite-booth-details {
  flex: 0 0 clamp(10vw, 15vw, 20vw);
  text-wrap: wrap;
  font-size: 0.8em;
}

.required.favorite-notes {
  margin: 0
}

.favorite-notes-form {
  flex: 1;
}

.favorite-notes-input.form-control {
  color: $deep-navy;
  font-size: 0.8em;
  line-height: 1.2;
  padding: 0.25rem;
  background-color: $light-gray;
  resize: none;
  overflow-y: auto;
  border-color: transparent;
  height: 5rem;
  // min-width: 10em;
  flex: 0 0 clamp(10vw, 40vw, 50vw);
}

.favorite-notes-input.form-control:focus {
  box-shadow: 0 0 0 1px $dark-goldenrod;
  border-color: transparent;
}

.favorite-notes-input.is-valid {
  background-image: none;
}

.favorite-notes-btn {
  font-size: 0.8em;
  flex: 0 0 clamp(2em, 5svw, 5em);
  text-wrap: wrap;
  color: inherit;
}

.favorite-delete-btn {
  display: none;
}

